# ai-store-dkb

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
ai_store_dkb/: __init__.py
config/: categories.yml  e2e_validation_sources.json  instance.yml  sources.json
data/validation/: validation_report.json  validation_report.md
data/validation/processed/: directives.json
scripts/: build_catalog.py  build_report.py  collect_all.py  collect_github.py  export_catalog.py  process_collected.py  report.py  run_pipeline.py  validate_e2e.py
tests/: test_collect.py  test_pipeline.py  test_process_collected.py
