[project]
name = "ai-store-dkb"
version = "0.1.0"
description = "AI ecosystem research and collection store powered by DKB"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "dkb-runtime",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["ai_store_dkb"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
